Add option to lauch admin req. exes
Add option to lauch admin req. exes

--- a/GreyAdministrationManager.csproj
+++ b/GreyAdministrationManager.csproj
@@ -12,6 +12,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <NeutralLanguage>en-CA</NeutralLanguage>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
