--- a/GreyAdministrationManager.csproj
+++ b/GreyAdministrationManager.csproj
@@ -6,9 +6,9 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>Grey Administration Manager</AssemblyName>
     <RootNamespace>GreyAdministrationManager</RootNamespace>
-    <Company>GreyCardinalSoft</Company>
+    <Company>CardinalSoft</Company>
     <Description>A simple windows forms application for quick executable launch.</Description>
-    <Copyright>Copyright © GreyCardinalSoft 2021</Copyright>
+    <Copyright>Copyright © CardinalSoft 2021</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <NeutralLanguage>en-CA</NeutralLanguage>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
